# ProtonDrive-Linux

./: .gitignore  Cargo.toml  README.md  RELEASING.md
.github/workflows/: ci.yml  integration.yml  release.yml
crates/protondrive-bridge/: Cargo.toml  build.rs
crates/protondrive-bridge/go/: bridge.go  go.mod  go.sum
crates/protondrive-bridge/go/integration/: captcha.go  go.mod  go.sum  imgutil.go  main.go  totp.go
crates/protondrive-bridge/go/proton-api-bridge-fork/: drive.go
crates/protondrive-bridge/src/: lib.rs
crates/protondrive-bridge/tests/: fixtures_test.rs
crates/protondrive-bridge/tests/fixtures/: about_info.json  event_batch_empty.json  event_batch_full.json  login_hv_required.json  login_success.json
crates/protondrive-cli/: Cargo.toml
crates/protondrive-cli/src/: main.rs
crates/protondrive-core/: Cargo.toml
crates/protondrive-core/src/: config.rs  daemon.rs  error.rs  keyring.rs  lib.rs  types.rs
crates/protondrive-core/src/api/: client.rs  events.rs  mod.rs  model.rs
crates/protondrive-core/src/auth/: mod.rs  srp.rs  totp.rs
crates/protondrive-core/src/cache/: blobs.rs  meta.rs  mod.rs
crates/protondrive-core/src/crypto/: mod.rs
crates/protondrive-core/src/sync/: mod.rs
crates/protondrive-daemon/: Cargo.toml
crates/protondrive-daemon/src/: main.rs
crates/protondrive-fuse/: Cargo.toml
crates/protondrive-fuse/src/: fs.rs  lib.rs  main.rs
crates/protondrive-hv/: Cargo.toml
crates/protondrive-hv/src/: main.rs
crates/protondrive-sync/: Cargo.toml
crates/protondrive-sync/src/: agent.rs  conflict.rs  consolidation.rs  lib.rs  local.rs  propagation.rs  reconciliation.rs  remote.rs  state.rs
crates/protondrive-ui/: Cargo.toml
crates/protondrive-ui/src/: crash.rs  main.rs  sync.rs  tray.rs
crates/protondrive-ui/src/ui/: mod.rs
packaging/appimage/: build-appimage.sh
packaging/arch/: PKGBUILD.in
packaging/debian/: cargo-deb.snippet.toml
packaging/desktop/: me.proton.drive.Linux.desktop  me.proton.drive.Linux.metainfo.xml
packaging/flatpak/: me.proton.drive.Linux.yaml
packaging/rpm/: protondrive-linux.spec.in
packaging/systemd/: protondrive.service
packaging/tmpfiles.d/: protondrive.conf
protondrive-linux/: PKGBUILD
scripts/: set-release-version.sh
