[package]
name        = "protondrive-core"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
authors.workspace     = true
repository.workspace  = true
description = "Core library for ProtonDrive-Linux: auth, API, crypto, cache and sync."

[dependencies]
protondrive-bridge = { path = "../protondrive-bridge" }
tokio.workspace        = true
futures.workspace      = true
async-trait.workspace  = true
thiserror.workspace    = true
anyhow.workspace       = true
tracing.workspace      = true

reqwest.workspace      = true
serde.workspace        = true
serde_json.workspace   = true
serde_bytes.workspace  = true
url.workspace          = true

sha2.workspace         = true
hmac.workspace         = true
base64.workspace       = true
hex.workspace          = true
rand.workspace         = true
totp-rs.workspace      = true
num-bigint-dig.workspace = true
pgp.workspace          = true

rusqlite.workspace     = true
directories.workspace  = true
toml.workspace         = true
bytes.workspace        = true

secret-service.workspace = true

parking_lot.workspace  = true
once_cell.workspace    = true
chrono.workspace       = true
uuid.workspace         = true
lru.workspace          = true
walkdir.workspace      = true

[dev-dependencies]
tempfile = "3"
