[package]
name        = "protondrive-fuse"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
authors.workspace     = true
repository.workspace  = true
description = "FUSE filesystem for ProtonDrive-Linux."

[[bin]]
name = "protondrive-fs"
path = "src/main.rs"

[dependencies]
protondrive-core = { path = "../protondrive-core" }
tokio.workspace        = true
tracing.workspace      = true
tracing-subscriber.workspace = true
anyhow.workspace       = true
fuser.workspace        = true
libc.workspace         = true
nix.workspace          = true
parking_lot.workspace  = true
chrono.workspace       = true
