[package]
name        = "protondrive-fuse"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
authors.workspace     = true
repository.workspace  = true
rust-version.workspace = true

[dependencies]
protondrive-bridge = { path = "../protondrive-bridge" }
protondrive-sync   = { path = "../protondrive-sync" }

fuser       = { version = "0.14" }
libc        = { workspace = true }
parking_lot = { workspace = true }
tokio       = { workspace = true }
tracing     = { workspace = true }
anyhow      = { workspace = true }
