[package]
name        = "protondrive-sync"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
authors.workspace     = true
repository.workspace  = true
rust-version.workspace = true

[dependencies]
protondrive-bridge = { path = "../protondrive-bridge" }
protondrive-core   = { path = "../protondrive-core" }

tokio       = { workspace = true }
futures     = { workspace = true }
async-trait = { workspace = true }
thiserror   = { workspace = true }
anyhow      = { workspace = true }
tracing     = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
sha2        = { workspace = true }
hex         = { workspace = true }
chrono      = { workspace = true }
rusqlite    = { workspace = true }
parking_lot = { workspace = true }
walkdir     = { workspace = true }
notify      = "6"
directories = { workspace = true }
